# lume

./: .gitignore  CHANGELOG.md  README.md  cabal.project  lume  lume.cabal  node.config.json  wallet.config.json
.github/workflows/: ci.yaml
lume-core/: README.md  lume-core.cabal
lume-core/src/Lume/: Core.hs
lume-core/src/Lume/Core/Block/: Difficulty.hs  Internal.hs
lume-core/src/Lume/Core/Crypto/: Address.hs  Hash.hs  Signature.hs
lume-core/src/Lume/Core/Time/: Timestamp.hs
lume-core/src/Lume/Core/Transaction/: Coin.hs  Internal.hs
lume-core/test/: Main.hs
lume-core/test/Lume/Core/Block/: DifficultySpec.hs  InternalSpec.hs
lume-core/test/Lume/Core/Crypto/: AddressSpec.hs  HashSpec.hs  MerkleTreeSpec.hs  SignatureSpec.hs
lume-node/: README.md  lume-node.cabal
lume-node/src/: CLI.hs
lume-node/src/Lume/: Node.hs
lume-node/src/Lume/Node/: Chain.hs  Command.hs  Mempool.hs  Miner.hs  Network.hs
lume-node/src/Lume/Node/Miner/: PoW.hs
lume-node/src/Lume/Node/Network/: Message.hs  P2P.hs  Peer.hs  RPC.hs  State.hs
lume-node/src/Lume/Node/Storage/: Database.hs  FileStorage.hs
lume-node/src/Lume/Node/Storage/Database/: Chainstate.hs  Internal.hs
lume-node/test/: Main.hs
lume-node/test/Lume/Node/: ChainSpec.hs
lume-node/test/Lume/Node/Miner/: PoWSpec.hs
lume-node/test/Lume/Node/Storage/: DatabaseSpec.hs  FileStorageSpec.hs
lume-wallet/: README.md  lume-wallet.cabal
lume-wallet/app/: Main.hs
lume-wallet/src/: CLI.hs
lume-wallet/src/Lume/: Wallet.hs
lume-wallet/src/Lume/Wallet/: Command.hs  Config.hs  FileSystem.hs  Internal.hs  Types.hs
lume-wallet/src/Lume/Wallet/Network/: Node.hs
lume-wallet/src/Lume/Wallet/Storage/: Database.hs
lume-wallet/src/Lume/Wallet/Transaction/: Builder.hs  Signer.hs
lume-wallet/test/: Main.hs
lume-wallet/test/Lume/Wallet/: InternalSpec.hs
lume-wallet/test/Lume/Wallet/Storage/: DatabaseSpec.hs
lume-wallet/test/Lume/Wallet/Transaction/: BuilderSpec.hs  SignerSpec.hs
src/: CLI.hs  Lume.hs
src/Lume/: Block.hs  Consensus.hs  Network.hs  Node.hs  Storage.hs  Transaction.hs  Types.hs  Wallet.hs
src/Lume/Block/: Builder.hs  Genesis.hs  Internal.hs  Types.hs  Validate.hs
src/Lume/Consensus/: Difficulty.hs  PoW.hs
src/Lume/Core/: Amount.hs  Block.hs  Idx.hs  Nonce.hs  State.hs  Timestamp.hs  Transaction.hs  Tx.hs  UTXO.hs  Version.hs
src/Lume/Core/Block/: Difficulty.hs  Internal.hs
src/Lume/Core/Crypto/: Address.hs  Hash.hs  MerkleTree.hs  Signature.hs
src/Lume/Core/Time/: Timestamp.hs
src/Lume/Core/Transaction/: Coin.hs  Internal.hs
src/Lume/Crypto/: Address.hs  Hash.hs  MerkleTree.hs  Signature.hs
src/Lume/Network/: Internal.hs
src/Lume/Node/: Chain.hs  Command.hs  Config.hs  Mempool.hs  Network.hs  Storage.hs
src/Lume/Node/Miner/: PoW.hs
src/Lume/Node/Network/: Internal.hs  Message.hs  P2P.hs  RPC.hs  State.hs  Types.hs
src/Lume/Node/Storage/: Database.hs  FileStorage.hs
src/Lume/Node/Storage/Database/: Block.hs  Internal.hs
src/Lume/Storage/: Database.hs  FileStorage.hs
src/Lume/Time/: Timestamp.hs
src/Lume/Transaction/: Amount.hs  Builder.hs  Coin.hs  Internal.hs  Mempool.hs  Types.hs  Validate.hs
src/Lume/Wallet/: Command.hs  Config.hs  Internal.hs  Transaction.hs  Tx.hs
src/Lume/Wallet/Network/: Node.hs
src/Lume/Wallet/Storage/: Database.hs
src/Lume/Wallet/Transaction/: Builder.hs  CoinSelection.hs  Signer.hs
test/: Main.hs
test/Lume/: Mocks.hs
test/Lume/Block/: BuilderTest.hs  InternalTest.hs
test/Lume/Consensus/: DifficultyTest.hs  PoWTest.hs
test/Lume/Core/Block/: DifficultyTest.hs  InternalTest.hs
test/Lume/Core/Crypto/: AddressTest.hs  HashTest.hs  MerkleTreeTest.hs  SignatureTest.hs
test/Lume/Crypto/: AddressTest.hs  HashTest.hs  MerkleTreeTest.hs  SignatureTest.hs
test/Lume/Node/: ChainTest.hs
test/Lume/Node/Miner/: PoWTest.hs
test/Lume/Node/Storage/: DatabaseTest.hs  FileStorageTest.hs
test/Lume/Storage/: DatabaseTest.hs  FileStorageTest.hs
test/Lume/Transaction/: BuilderTest.hs  InternalTest.hs
test/Lume/Wallet/: InternalTest.hs  TxTest.hs
test/Lume/Wallet/Storage/: DatabaseTest.hs
test/Lume/Wallet/Transaction/: BuilderTest.hs  SignerTest.hs
