cabal-version:      3.0
name:               lume
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    , CLI
    , Lume
    , Lume.Block
    , Lume.Block.Internal
    , Lume.Block.Genesis
    , Lume.Transaction
    , Lume.Transaction.Coin
    , Lume.Transaction.Mempool
    , Lume.Transaction.Internal
    , Lume.Consensus
    , Lume.Consensus.PoW
    , Lume.Consensus.Difficulty
    , Lume.Crypto.Hash
    , Lume.Crypto.Address
    , Lume.Crypto.Signature
    , Lume.Crypto.MerkleTree
    , Lume.Wallet
    , Lume.Wallet.Internal
    , Lume.Storage
    , Lume.Storage.Database
    , Lume.Storage.FileStorage
    , Lume.Network
    , Lume.Network.Internal
    , Lume.Time.Timestamp
  other-modules:
  hs-source-dirs: src
  build-depends:
      base ^>=4.17.2.1
    , bytestring
    , text
    , containers
    , lens
    , binary
    , crypton
    , memory
    , network-transport
    , network-transport-tcp
    , distributed-process
    , bech32
    , time
    , mtl
    , transformers
    , leveldb-haskell
    , directory
    , filepath
    , optparse-applicative
  default-language: Haskell2010

executable lume
  import: warnings
  main-is: Main.hs
  other-modules:
  hs-source-dirs: app
  build-depends:
      base
    , lume
  default-language: Haskell2010

test-suite lume-test
  import: warnings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
      Lume.Mocks
    , Lume.Crypto.HashTest
    , Lume.Crypto.AddressTest
    , Lume.Crypto.SignatureTest
    , Lume.Crypto.MerkleTreeTest
    , Lume.Consensus.DifficultyTest
    , Lume.Consensus.PoWTest
    , Lume.Block.InternalTest
    , Lume.Transaction.InternalTest
    , Lume.Wallet.InternalTest
    , Lume.Storage.DatabaseTest
    , Lume.Storage.FileStorageTest
  build-depends:
      base
    , lume
    , tasty
    , tasty-hunit
    , text
    , vector
    , bytestring
    , binary
    , lens
    , containers
    , mtl
    , transformers
    , temporary
    , resourcet
    , directory
    , filepath
