cabal-version:      3.0
name:               lume
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    , CLI
    , Lume
    , Lume.Core
    , Lume.Core.Block
    , Lume.Core.Block.Internal
    , Lume.Core.Block.Difficulty
    , Lume.Core.Transaction
    , Lume.Core.Transaction.Coin
    , Lume.Core.Transaction.Internal
    , Lume.Core.Crypto.Hash
    , Lume.Core.Crypto.Address
    , Lume.Core.Crypto.Signature
    , Lume.Core.Crypto.MerkleTree
    , Lume.Core.Time.Timestamp
    , Lume.Node
    , Lume.Node.Miner
    , Lume.Node.Miner.PoW
    , Lume.Node.Storage
    , Lume.Node.Storage.Database
    , Lume.Node.Storage.FileStorage
    , Lume.Node.Network
    , Lume.Node.Network.Internal
    , Lume.Node.Config
    , Lume.Wallet
    , Lume.Wallet.Storage.Database
    , Lume.Wallet.Transaction
    , Lume.Wallet.Transaction.Builder
    , Lume.Wallet.Transaction.CoinSelection
    , Lume.Wallet.Transaction.Signer
    , Lume.Wallet.Internal
    , Lume.Wallet.Command
  other-modules:
  hs-source-dirs: src
  build-depends:
      base ^>=4.17.2.1
    , bytestring
    , text
    , containers
    , lens
    , binary
    , crypton
    , memory
    , network
    , base16-bytestring
    , network-transport
    , network-transport-tcp
    , distributed-process
    , bech32
    , time
    , mtl
    , transformers
    , leveldb-haskell
    , directory
    , filepath
    , optparse-applicative
    , sqlite-simple
  default-language: Haskell2010

executable lume
  import: warnings
  main-is: Main.hs
  other-modules:
  hs-source-dirs: app
  build-depends:
      base
    , lume
  default-language: Haskell2010

test-suite lume-test
  import: warnings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
      Lume.Mocks
    , Lume.Core.Block.DifficultyTest
    , Lume.Core.Block.InternalTest
    , Lume.Core.Crypto.HashTest
    , Lume.Core.Crypto.AddressTest
    , Lume.Core.Crypto.SignatureTest
    , Lume.Core.Crypto.MerkleTreeTest
    , Lume.Node.Miner.PoWTest
    , Lume.Node.Storage.DatabaseTest
    , Lume.Node.Storage.FileStorageTest
    , Lume.Wallet.Storage.DatabaseTest
    , Lume.Wallet.Transaction.BuilderTest
    , Lume.Wallet.Transaction.BuilderTest
    , Lume.Wallet.Transaction.SignerTest
    , Lume.Wallet.InternalTest
  build-depends:
      base
    , lume
    , tasty
    , tasty-hunit
    , text
    , vector
    , bytestring
    , binary
    , lens
    , containers
    , mtl
    , transformers
    , temporary
    , resourcet
    , directory
    , filepath
